# PLCEditio

./: .gitignore  .gitmodules  CMakeLists.txt
example_proj/: and.block  example.schem  example.schematic  example1.schematic  example2.schematic  memory.schematic  rs_test.schematic  schematic_example.schematic  sort_test.schematic
example_proj/L1.library/test1.block/: test1.cpp  test1.json
example_proj/PLC_input.block/: PLC_input.cpp  PLC_input.json
example_proj/PLC_output.block/: PLC_output.cpp  PLC_output.json
example_proj/and.block/: and.cpp  and.json
example_proj/double_const.block/: double_const.cpp  double_const.json
example_proj/input.block/: input.cpp  input.json
example_proj/int_const.block/: int_const.json
example_proj/not.block/: not.cpp
example_proj/or.block/: or.cpp  or.json
example_proj/output.block/: output.json
example_proj/test.block/: test.cpp  test.json
example_proj/test1.block/: test1.json
src/: app.hpp  block_editor.cpp  block_editor.hpp  code_uploader.hpp  debug_console.hpp  dockspace.cpp  dockspace.hpp  exec_order.hpp  librarian.cpp  librarian.hpp  main.cpp  schematic.cpp  schematic.hpp  schematic_block.cpp  schematic_block.hpp  schematic_editor.hpp  status_bar.cpp  status_bar.hpp  status_checker.hpp  tcp_client.hpp  thread.hpp  window_object.hpp
std_blocks/and.block/: and.json
std_blocks/boolean.library/and.block/: and.cpp  and.json
std_blocks/boolean.library/not.block/: not.cpp  not.json
std_blocks/boolean.library/or.block/: or.cpp
std_blocks/const.library/const_bool.block/: const_bool.cpp  const_bool.json
std_blocks/input.block/: input.json
std_blocks/io.library/input.block/: input.cpp  input.json
std_blocks/io.library/output.block/: output.cpp  output.json
std_blocks/memory.library/D.block/: D.cpp
std_blocks/memory.library/RS.block/: RS.cpp
std_blocks/memory.library/mem_read.block/: mem_read.cpp  mem_read.json
std_blocks/memory.library/mem_write.block/: mem_write.cpp  mem_write.json
std_blocks/output.block/: output.json
std_blocks/register.library/D.block/: D.cpp  D.json
std_blocks/register.library/RS.block/: RS.cpp  RS.json
std_blocks/time.library/clock.block/: clock.cpp  clock.json
std_blocks/time.library/delay.block/: delay.cpp  delay.json
